--- a/src/app/contract-renewal-details/contract-renewal-details.component.html
+++ b/src/app/contract-renewal-details/contract-renewal-details.component.html
@@ -80,13 +80,13 @@
         <div class="question-wrap col-sm-12 py-3 my-2">
           <p class="mb-0 text-dark">Current Expiry Date?</p>
           <div class="info-wrap">
-            <input type="text" class="form-control" placeholder="mm/dd/yyyy" #dp="bsDatepicker" bsDatepicker />
+            <input type="text" class="form-control" placeholder="mm/dd/yyyy" bsDatepicker />
          </div>
         </div>
         <div class="question-wrap col-sm-12 py-3 my-2">
           <p class="mb-0 text-dark">New Expiry Date?</p>
           <div class="info-wrap">
-            <input type="text" class="form-control" placeholder="mm/dd/yyyy" #dp2="bsDatepicker" bsDatepicker />
+            <input type="text" class="form-control" placeholder="mm/dd/yyyy" bsDatepicker />
         </div> 
         </div>
 
